--- a/app/src/main/res/layout/activity_kart.xml
+++ b/app/src/main/res/layout/activity_kart.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".KartActivity">
-
     <fragment
         android:id="@+id/sceneform_ux_fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
@@ -13,23 +12,13 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="141dp"
         tools:layout_editor_absoluteY="325dp" />
-
     <Button
-        android:id="@+id/goBtn"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Go"
+        android:id="@+id/joystick"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.935" />
-
-
-
-
+        app:layout_constraintVertical_bias="0.9" />
 </android.support.constraint.ConstraintLayout>
