--- a/app/src/main/res/layout/ar_labelplate.xml
+++ b/app/src/main/res/layout/ar_labelplate.xml
@@ -6,10 +6,10 @@
     android:layout_weight="1"
     android:background="#AF000000"
     android:textColor="@android:color/white"
+    android:fontFamily="sans-serif"
+    android:textStyle="bold"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingTop="2dp"
-    android:paddingBottom="2dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingLeft="14dp"
+    android:paddingRight="14dp"
     android:textAlignment="center" />
