--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,6 +8,20 @@
     tools:context=".menu.MenuActivity">
 
     <Button
+        android:id="@+id/btnOptions"
+        android:layout_width="215dp"
+        android:layout_height="53dp"
+        android:text="Options"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.653" />
+
+    <Button
         android:id="@+id/btnStartGame"
         android:layout_width="281dp"
         android:layout_height="53dp"
@@ -27,26 +41,28 @@
         android:id="@+id/btnStartHosting"
         android:layout_width="214dp"
         android:layout_height="53dp"
+        android:text="Host Game"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:text="Host Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnJoinGame"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.043" />
 
     <Button
         android:id="@+id/btnJoinGame"
         android:layout_width="215dp"
         android:layout_height="53dp"
+        android:text="Join Game"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:text="Join Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.449" />
+
 </android.support.constraint.ConstraintLayout>
