--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,15 +46,18 @@
 
     <TextView
         android:id="@+id/count"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="240dp"
         android:textColor="@android:color/white"
-        android:textSize="100sp"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:paddingLeft="1sp"
+        android:paddingRight="1sp"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="12sp"
+        android:autoSizeMaxTextSize="100sp"
+        android:autoSizeStepGranularity="2sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
