--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RaceActivity">
 
     <fragment
         android:id="@+id/ar"
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <RelativeLayout
-        android:id="@+id/joystick"
+        android:id="@+id/pad"
         android:layout_width="160dp"
         android:layout_height="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,15 +34,15 @@
 
     <Button
         android:id="@+id/reset"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="#FF0000"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="#7fFF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.95" />
 
     <TextView
         android:id="@+id/count"
