--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,108 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <fragment
-        android:id="@+id/ar"
-        android:name="com.google.ar.sceneform.ux.ArFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <RelativeLayout
-        android:id="@+id/pad"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9">
-        <ImageView
-            android:id="@+id/wheel"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/steering_wheel"
-            android:scaleType="fitXY"/>
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/reset"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="#7fFF0000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
-
+    tools:context=".menu.MainActivity">
     <TextView
-        android:id="@+id/count"
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:paddingLeft="1sp"
-        android:paddingRight="1sp"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="12sp"
-        android:autoSizeMaxTextSize="100sp"
-        android:autoSizeStepGranularity="2sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/app_name"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"/>
+    <LinearLayout
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <TextView
-            android:id="@+id/lap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+        <Button
+            android:id="@+id/btnRace"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
             android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_toStartOf="@+id/lap"
+            android:textStyle="normal"
+            android:text="@string/race"
+            android:layout_marginBottom="8dp"/>
+        <Button
+            android:id="@+id/btnCustomize"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="@string/customize"
             android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"/>
-    </RelativeLayout>
-    <!--<TextView-->
-        <!--android:id="@+id/lap"-->
-        <!--android:layout_width="222dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:ems="10"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:textSize="30sp"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textAlignment="textEnd"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.888"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintVertical_bias="0.0" />-->
-
+            android:textStyle="normal" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
