--- a/app/src/main/res/layout/activity_race.xml
+++ b/app/src/main/res/layout/activity_race.xml
@@ -44,6 +44,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.95" />
 
+    <ImageView
+        android:id="@+id/capture"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
+
     <TextView
         android:id="@+id/count"
         android:layout_width="match_parent"
