--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
+        android:textAllCaps="true"
         android:textSize="50sp"
         android:textStyle="bold"
-        android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"/>
+        app:layout_constraintVertical_bias="0.158" />
     <LinearLayout
         android:layout_width="260dp"
         android:layout_height="wrap_content"
@@ -26,19 +28,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <Button
             android:id="@+id/btnRace"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/new_race"
             android:textSize="30sp"
-            android:textStyle="normal"
-            android:text="@string/race"
-            android:layout_marginBottom="8dp"/>
+            android:textStyle="normal" />
         <Button
             android:id="@+id/btnCustomize"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/customize"
+            android:textSize="30sp"
+            android:textStyle="normal" />
+        <Button
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="@string/search"
+            android:textSize="30sp"
+            android:textStyle="normal" />
+
+        <Button
+            android:id="@+id/courseLibrary"
+            android:layout_width="match_parent"
+            android:layout_height="115dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/course_library"
             android:textSize="30sp"
             android:textStyle="normal" />
     </LinearLayout>
