--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,21 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.158" />
+    <com.google.ar.sceneform.SceneView
+        android:id="@+id/ar_scene"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
     <LinearLayout
         android:layout_width="260dp"
         android:layout_height="wrap_content"
@@ -27,38 +38,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" >
         <Button
             android:id="@+id/btnRace"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginBottom="8dp"
             android:text="@string/new_race"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="normal" />
         <Button
             android:id="@+id/btnCustomize"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/customize"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="normal" />
         <Button
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/search"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="normal" />
 
         <Button
             android:id="@+id/courseLibrary"
             android:layout_width="match_parent"
-            android:layout_height="115dp"
+            android:layout_height="70dp"
             android:layout_marginBottom="8dp"
             android:text="@string/course_library"
-            android:textSize="30sp"
+            android:textSize="24sp"
             android:textStyle="normal" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
