Continue new kart model

--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        android:name="io.github.formular_team.formular.SettingsFragment"
+        android:name="io.github.formular_team.formular.CustomizeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
