--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.6" >
         <Button
-            android:id="@+id/btnRace"
+            android:id="@+id/btnHostRace"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/new_race"
+            android:text="@string/host_race"
+            android:textSize="24sp"
+            android:textStyle="normal" />
+        <Button
+            android:id="@+id/btnJoinRace"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/join_race"
             android:textSize="24sp"
             android:textStyle="normal" />
         <Button
