--- a/app/src/main/res/layout/activity_sandbox.xml
+++ b/app/src/main/res/layout/activity_sandbox.xml
@@ -19,38 +19,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9">
-
+        app:layout_constraintVertical_bias="0.9"
+        android:visibility="invisible">
         <ImageView
             android:id="@+id/wheel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/circle"
-            android:scaleType="fitXY" />
-
+            android:src="@drawable/steering_wheel" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/joystick"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/joystick"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="@+id/pad"
-        app:layout_constraintEnd_toEndOf="@+id/pad"
-        app:layout_constraintStart_toStartOf="@+id/pad"
-        app:layout_constraintTop_toTopOf="@+id/pad" />
     <TextView
         android:id="@+id/ip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75"
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:padding="24dp"
+        android:visibility="invisible" />
+    <Button
+        android:id="@+id/start"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:text="Start"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
         android:visibility="invisible" />
     <TextView
         android:id="@+id/count"
@@ -67,18 +68,6 @@
         android:autoSizeStepGranularity="2sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <Button
-        android:id="@+id/start"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:text="Start"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
-        android:visibility="invisible" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
