--- a/app/src/main/res/layout/fragment_race.xml
+++ b/app/src/main/res/layout/fragment_race.xml
@@ -5,13 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArInterfaceFragment">
+    tools:context=".RaceFragment">
 
     <io.github.formular_team.formular.SteeringWheelView
         android:id="@+id/steering_wheel"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:visibility="invisible"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,18 +23,13 @@
         android:id="@+id/ip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="120dp"
+        android:padding="6dp"
+        android:textSize="24sp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:visibility="invisible"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
+        android:background="@drawable/tray_background" />
 
     <Button
         android:id="@+id/start"
