--- a/app/src/main/res/layout/fragment_race_land.xml
+++ b/app/src/main/res/layout/fragment_race_land.xml
@@ -5,14 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArInterfaceFragment">
+    tools:context=".RaceFragment">
 
     <io.github.formular_team.formular.SteeringWheelView
         android:id="@+id/steering_wheel"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:visibility="invisible"
-        android:layout_gravity="right|center_vertical"
+        android:layout_gravity="end|center_vertical"
         android:layout_margin="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,15 +26,8 @@
         android:textSize="30sp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:visibility="invisible"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
+        android:layout_gravity="top|center"
+        android:layout_marginTop="20dp" />
 
     <Button
         android:id="@+id/start"
