Add toolbar icons Change kart texture Start customization in ar

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,7 @@
     <fragment
         android:id="@+id/race_fragment"
         android:name="io.github.formular_team.formular.RaceFragment" />
+    <fragment
+        android:id="@+id/customize_fragment"
+        android:name="io.github.formular_team.formular.CustomizeFragment" />
 </navigation>
