--- a/app/src/main/res/menu/ar_toolbar.xml
+++ b/app/src/main/res/menu/ar_toolbar.xml
@@ -2,15 +2,15 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/tool_shop"
-        android:icon="@drawable/circle"
-        android:title="Shop" />
+        android:id="@+id/tool_customize"
+        android:icon="@drawable/spray"
+        android:title="Customize" />
     <item
         android:id="@+id/tool_create"
-        android:icon="@drawable/circle"
-        android:title="Create" />
+        android:icon="@drawable/bricks"
+        android:title="Build" />
     <item
         android:id="@+id/tool_join"
-        android:icon="@drawable/circle"
-        android:title="Join" />
+        android:icon="@drawable/flag"
+        android:title="Race" />
 </menu>
