--- a/app/src/main/res/layout/host_address_prompt.xml
+++ b/app/src/main/res/layout/host_address_prompt.xml
@@ -13,5 +13,5 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="Server address" />
+        android:hint="" />
 </LinearLayout>
